[package]
name = "max_n"
description = "A utility function on iterators to find the maximum or minimum n values"
version = "0.1.0"
edition = "2021"
license = "MIT"
authors = ["Jonathan Brouwer <jonathantbrouwer@gmail.com>"]
repository = "https://github.com/JonathanBrouwer/max_n"

[profile.test]
opt-level = 3
lto = true

[dependencies]


[dev-dependencies]
rand = "0.8.5"
rand_chacha = "0.3.1"